# API_lib

./: .cargo-release.toml  .releaserc.json  Cargo.toml  LICENSE  README.md  convco.toml  ghcr.io_login.sh
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml  cicd.yml  rust.yml
ci-tools/scripts/: publish.sh
src/: lib.rs
src/database/: db_interface.rs  errors.rs  mod.rs
src/database/postgresql/: mod.rs  postgre_interface.rs
src/database/postgresql/queries/: about_user.rs  does_user_exist_by_email.rs  does_user_exist_by_id.rs  login_user.rs  mod.rs  register_user.rs
src/database/queries/: does_user_exist_by_email.rs  does_user_exist_by_id.rs  errors.rs  has_access.rs  is_admin.rs  is_session_token_valid.rs  mod.rs
src/database/queries_result_views/: about_user_query_result_view.rs  does_user_exist_by_email.rs  does_user_exist_by_id.rs  login_user.rs  mod.rs  register_user.rs  utils.rs
src/database/query_views/: about_user_query_view.rs  does_user_exist_by_email.rs  does_user_exist_by_id.rs  has_access.rs  is_admin.rs  is_session_token_valid.rs  login_user.rs  mod.rs  register_user.rs
src/database/utils/: does_user_exist_by_id.rs
src/env_manager/: get_critical_env_var.rs  get_env_var.rs  mod.rs
src/jwt_manager/: check_jwt_validity.rs  decode_jwt.rs  generate_jwt.rs  get_jwt_secret.rs  get_jwt_timeout.rs  mod.rs
src/pool/: mod.rs
src/pool/redis/: handle_get.rs  mod.rs
src/pool/redis/simple_key/: mod.rs
src/pool/redis/simple_key/secured/: mod.rs  secure_delete.rs  secure_get.rs  secure_post.rs  update_data.rs
src/pool/redis/simple_key/unsecured/: check_key.rs  delete_data.rs  get_data.rs  mod.rs  post_data.rs
src/redis/: mod.rs  redis_manager.rs
src/redis/simple_key/: add_key.rs  delete_key.rs  get_key.rs  key_exist.rs  secure_add_key.rs  secure_delete_key.rs  secure_get_key.rs  set_key.rs
src/security/: admin_middleware.rs  auth_middleware.rs  auth_user.rs  checker.rs  mod.rs  right_middleware.rs
src/test_setup/: db_setup.rs  mod.rs  queries_setup.rs  redis_setup.rs
tests/: database_tests.rs  env_tests.rs  jwt_tests.rs  middlewares_tests.rs  queries_tests.rs  redis_test.rs
tests/common/: db_setup.rs  mod.rs  queries_setup.rs  redis_setup.rs
