[package]
name = "mairie360_api_lib"
version = "0.3.5"
authors = ["Quentin TENNEREL <quentin.tennerel@epitech.eu>"]
edition = "2021"
description = "Lib for mairie360 APIs"
license = "MIT"
repository = "https://github.com/mairie360/API_lib"

[dependencies]
actix-web = "4"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
async-trait = "0.1.89"
once_cell = "1.21.3"
redis = "1.0.3"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
thiserror = "2.0.18"
deadpool-redis = { version = "0.23.0", features = ["rt_tokio_1"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
axum = "0.8.8"
anyhow = "1.0.102"
testcontainers = "0.27.0"

[dev-dependencies]
serial_test = "3.3.1"
temp-env = "0.3.6"
postgres = "0.19"
